# cc-wire-analyzer

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh.md  build-cli.spec  build-mac.spec  build.spec  pyproject.toml
.github/workflows/: release.yml
docs/: AI_USAGE.md  API契约.md
src/: app.py  capture_store.py  classifier.py  cli.py  cli_selftest.py  config.py  desktop.py  dev_seed.py  proxy.py  proxy_selftest.py  settings_guard.py
src/templates/: index.html
tools/: lane_probe.py
